--- a/boilerbotbattle.html
+++ b/boilerbotbattle.html
@@ -2,8 +2,8 @@
 layout: event-image
 image: B3-2018.jpg
 title: "Boiler Bot Battle"
-event-date: "October 14th-15th"
-event-year: "2022"
+event-date: "October 13th-14th"
+event-year: "2023"
 location: "1406 Teal Rd, Lafayette, IN 47905"
 <!-- link: https://forms.gle/NaFjWxBYwgHV3fkz7 -->
 location-ntrl: "Tippecanoe County Fairgrounds"
@@ -13,11 +13,9 @@ dark: true
 <section id="about" class="primary-section">
     <div class="container">
         <h1>About</h1><hr />
-        Boiler Bot Battle (B3) is an annual off-season event for FRC teams to compete in the previous season’s game. This means it will be another chance for teams to work together and play <b>RAPID REACT</b>! The event allows teams to learn, practice their skills, and get excited about the upcoming season. Additionally, the event is held close to Purdue University, giving teams the opportunity to visit the campus and ask current students questions.
+        Boiler Bot Battle (B3) is an annual off-season event for FRC teams to compete in the previous season’s game. This means it will be another chance for teams to work together and play <b>CHARGED UP</b>! The event allows teams to learn, practice their skills, and get excited about the upcoming season. Additionally, the event is held close to Purdue University, giving teams the opportunity to visit the campus and ask current students questions.
 	<br><br>
-	Got questions about the event? Send them to <a href="mailto:sszanti@purdue.edu">sszanti@purdue.edu</a>!
-	<br><br>
-	Want to volunteer at the event? <a href="https://forms.gle/F7ng5jcJgT1iZSdw5">fill out this form</a>.
+	More information to come!
     </div>
 </section>
 
