--- a/purdue-forums.html
+++ b/purdue-forums.html
@@ -2,8 +2,8 @@
 layout: event-image
 image: arch.jpg
 title: "Purdue First Forums"
-event-date: "October 1st"
-event-year: "2022"
+event-date: "Fall"
+event-year: "2023"
 dark: true
 ---
 <section id="about" class="primary-section">
