--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: big-image
 title: "Purdue FIRST Programs"
 mission-title: "Want to Join Us?"
-mission-summary: "Look below for ways to join below, like our mailing list to get updates!"
+mission-summary: "Look out for call-out information at the start of each semester."
 image: "PFP-Teams.jpg"
 contact: "president@purduefirst.org"
 dark: true
@@ -21,7 +21,6 @@ dark: true
 			<iframe src="https://www.crowdfunding.purdue.edu/PFP" width="760" height="500" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
 		</div>
 	</section>
--->
 
 <section id="callout">
 	<div class="container" style="text-align: center;">
@@ -31,10 +30,9 @@ dark: true
 		<h2><u>
 			<a href="https://docs.google.com/forms/d/e/1FAIpQLScbDBpEHb5sloMo2BKunaCFO9j4p_VHjslwb4eHV7WuIpBWZw/viewform?usp=pp_url">Stay updated on our mailing list here!</a>
 		</u></h2>
-		<!-- <img src="img/2020Callout.gif" style="float: none; margin-left: auto; margin-right: auto; width: 75%; height: auto;"/> -->
 	</div>
  </section>
-
+-->
 <section id="about" class="primary-section">
 	<div class="container">
 		<h1>About</h1>
