Fixed button link

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ dark: true
 	</div>
  </section>
 -->
-<a href="./worlds/" class="button" style="background-color: #4A53AF; color: white; text-align: center; text-decoration: none; display: inline-block; font-size: 16px; line-height: 48px; width: 100%">FIRST Championship Indiana FRC Teams</a>
+<a href="./worlds.html" class="button" style="background-color: #4A53AF; color: white; text-align: center; text-decoration: none; display: inline-block; font-size: 16px; line-height: 64px; width: 100%">FIRST Championship Indiana FRC Teams</a>
 <section id="about" class="primary-section">
 	<div class="container">
 		<h1>About</h1>
