--- a/index.html
+++ b/index.html
@@ -40,12 +40,12 @@ dark: true
 		<hr class="medium-hr">
 		<br>
 		<br>
-		<br>
-		<p>Purdue FIRST Programs (PFP) is a student organization and class that is based at Purdue University in West Lafayette, Indiana. It is a group composed of approximately 90 students who work together to support the mission and vision of FIRST, primarily through mentoring students in the surrounding Lafayette and West Lafayette communities.</p>
+		<p>Purdue FIRST Programs (PFP) is a student organization that is based at Purdue University in West Lafayette, Indiana. It is a group composed of approximately 35 students who work together to support the mission and vision of FIRST, primarily through mentoring students in the surrounding Lafayette and West Lafayette communities.</p>
 		<p>Currently, Purdue FIRST Programs supports almost 30 elementary and middle school FIRST Lego League and FIRST Tech Challenge teams and 4 FIRST Robotic Competition teams. Purdue FIRST Programs also holds a fall qualifying tournament for FIRST Lego League with a FIRST Tech Challenge competition, a spring competition for FIRST Lego League teams, and an offseason competition for FRC teams. In addition, PFP also participates in outreach events throughout the year on campus and in the community.</p>
 		<p>Purdue FIRST Programs inspires in youth and their communities an appreciation of science and technology, while developing life skills, passion, and leadership through mentoring and hands-on activities that provide opportunities for personal growth.</p>
 	</div>
 </section>
+<!--
 <section id="our-teams" class="primary-section">
 	<div class="container">
 		<h1>Leadership Class</h1>
@@ -56,14 +56,14 @@ dark: true
 		<p>Our FIRST Leadership class promotes and develops leadership skills for college students in an engaging, hands-on way. We have various team building activities that highlight the challenges of working in a group but also the benefits of having an effective leader. We have professors from departments across Purdue come to class and speak on what it means to be a leader to them. The professors share their wealth of knowledge and encourage us to continue to mentor and engage students in STEM.</p>
 	</div>
 </section>
+-->
 <section id="alum" class="primary-section">
 	<div class="container">
 		<h1>Are you a Purdue FIRST Programs alumni?</h1>
 		<hr class="medium-hr">
 		<br>
 		<br>
-		<br>
 		<p>If you are a Purdue FIRST Programs Alumni, and would like to give us your information so that we can inform you of what we are currently doing, please fill out this form!</p>
-		<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfL_I3cq_bKNPhdkBA0xUFzWBmBOFsSw_aeMWiLO_bjI08DAA/viewform?embedded=true" width="760" height="500" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
+		<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfL_I3cq_bKNPhdkBA0xUFzWBmBOFsSw_aeMWiLO_bjI08DAA/viewform?embedded=true" width="100%" height="450" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
 	</div>
 </section>
