update forums info for 2023

--- a/purdue-forums.html
+++ b/purdue-forums.html
@@ -2,7 +2,7 @@
 layout: event-image
 image: arch.jpg
 title: "Purdue First Forums"
-event-date: "Fall"
+event-date: "October 21st"
 event-year: "2023"
 dark: true
 ---
@@ -11,41 +11,12 @@ dark: true
         <h1>About</h1>
         <hr />
         <br />
-        <br />
-        This year, Purdue FIRST Forums will take place on Saturday, October 1st.  
-	This is a fun, educational experience for teams to hear from seasoned FIRST members and mentors, as well as get excited about the upcoming FTC & FRC season! This year’s overall theme will be ‘Back to Basics’, and will feature presentations that are for FRC, FTC, and are cross-program. 
-
+        This year, Purdue FIRST Forums will take place on Saturday, October 21st.  
+	      The Forums is a fun, educational experience for teams to hear from seasoned FIRST members and mentors, as well as get excited about the upcoming FTC & FRC season! 
+        Please see <a href="https://forums.firstindianarobotics.org/purdue-first-forums-2023">https://forums.firstindianarobotics.org/purdue-first-forums-2023</a> to sign up to present or check out more information about the event!
     <br />
     <br />
     <hr class="medium-hr thin" />
-    </div>
-</section>
-
-<section id="schedule" class="primary-section">
-    <div class="container">
-      <h2>Schedule</h2>
-	     <hr />
-        <a href="https://forums.firstindianarobotics.org/purdue-first-forums-2020/sessions/grid">2020 Schedule of workshops</a>
-      	<br />
-    </div>
-</section>
-
-<section id="location" class="primary-section">
-    <div class ="container"
-      <h2>Location</h2>
-        <hr />
-        We'll be live throughout the day at these 8 twitch channels. Check out the schedule for the full list of what is hosted when.
-        <br />
-        <ul>
-          <li><a href="http://twitch.tv/PurdueVirtualForumsCarver">Carver</a></li>
-          <li><a href="http://twitch.tv/PurdueVirtualForumsCurie">Curie</a></li>
-          <li><a href="http://twitch.tv/PurdueVirtualForumsEdison">Edison</a></li>
-          <li><a href="http://twitch.tv/PurdueVirtualForumsFrank">Franklin</a></li>
-          <li><a href="http://twitch.tv/PurdueVirtualForumsHopper">Hopper</a></li>
-          <li><a href="http://twitch.tv/PurdueVirtualForumsNewton">Newton</a></li>
-          <li><a href="http://twitch.tv/PurdueVirtualForumsTesla">Tesla</a></li>
-          <li><a href="http://twitch.tv/PurdueVirtualForumsTuring">Turing</a></li>
-        </ul>
     </div>
 </section>
 
