--- a/index.html
+++ b/index.html
@@ -8,15 +8,23 @@ contact: "president@purduefirst.org"
 dark: true
 ---
 
+<script>
+	function closeDialog() { 
+	  document.getElementById("modal-dialog").close(); 
+	} 
+</script>
+<dialog open id="modal-dialog">
+        <button type="button" onclick="closeDialog()">&times;</button>
+        <h4 class="modal-title">Fall 2023 Info</h4>
+        <p>Callouts: Aug 29 & 31 @ 6pm in LILLY 3410</p>
+        <a href="https://docs.google.com/forms/d/e/1FAIpQLSdu-1bZD9Td55nzgYEcyOKAxdYsMdxhXp1MIMO_Fa8zowMc7w/viewform">Interest Form Link</a>
+</dialog>
 
 <!--
-	<section id="alum" class="primary-section">
+	<section id="fundraising" class="primary-section">
 		<div class="container">
 			<h1>Interested in helping Purdue FIRST spread the message of FIRST?</h1>
-			<hr class="medium-hr">
-			<br>
-			<br>
-			<br>
+			<hr><br>
 			<p>Purdue FIRST is currently undertaking one of our largest fundraising efforts in our close to 20 year history! Please help support us or help by sharing the link to our fundraising page?</p>
 			<iframe src="https://www.crowdfunding.purdue.edu/PFP" width="760" height="500" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
 		</div>
@@ -33,13 +41,11 @@ dark: true
 	</div>
  </section>
 -->
-<a href="https://dayofgiving.purdue.edu/donate?campaign_id=171434" class="button" style="background-color: #D8B600; color: white; text-align: center; text-decoration: none; display: inline-block; font-size: 16px; line-height: 64px; width: 100%">🡆🡆 Purdue Day of Giving 🡄🡄</a>
+
+<!-- <a id="toastBanner" href="https://dayofgiving.purdue.edu/donate?campaign_id=171434" class="button" style="background-color: #D8B600; color: white; text-align: center; text-decoration: none; display: inline-block; font-size: 16px; line-height: 64px; width: 100%">🡆🡆 Purdue Day of Giving 🡄🡄</a> -->
 <section id="about" class="primary-section">
 	<div class="container">
-		<h1>About</h1>
-		<hr class="medium-hr">
-		<br>
-		<br>
+		<h1>About</h1><hr><br>
 		<p>Purdue FIRST Programs (PFP) is a student organization that is based at Purdue University in West Lafayette, Indiana. It is a group composed of approximately 35 students who work together to support the mission and vision of FIRST, primarily through mentoring students in the surrounding Lafayette and West Lafayette communities.</p>
 		<p>Currently, Purdue FIRST Programs supports almost 30 elementary and middle school FIRST Lego League and FIRST Tech Challenge teams and 4 FIRST Robotic Competition teams. Purdue FIRST Programs also holds a fall qualifying tournament for FIRST Lego League with a FIRST Tech Challenge competition, a spring competition for FIRST Lego League teams, and an offseason competition for FRC teams. In addition, PFP also participates in outreach events throughout the year on campus and in the community.</p>
 		<p>Purdue FIRST Programs inspires in youth and their communities an appreciation of science and technology, while developing life skills, passion, and leadership through mentoring and hands-on activities that provide opportunities for personal growth.</p>
@@ -48,21 +54,14 @@ dark: true
 <!--
 <section id="our-teams" class="primary-section">
 	<div class="container">
-		<h1>Leadership Class</h1>
-		<hr class="medium-hr">
-		<br>
-		<br>
-		<br>
+		<h1>Leadership Class</h1><hr><br>
 		<p>Our FIRST Leadership class promotes and develops leadership skills for college students in an engaging, hands-on way. We have various team building activities that highlight the challenges of working in a group but also the benefits of having an effective leader. We have professors from departments across Purdue come to class and speak on what it means to be a leader to them. The professors share their wealth of knowledge and encourage us to continue to mentor and engage students in STEM.</p>
 	</div>
 </section>
 -->
 <section id="alum" class="primary-section">
 	<div class="container">
-		<h1>Are you a Purdue FIRST Programs alumni?</h1>
-		<hr class="medium-hr">
-		<br>
-		<br>
+		<h1>Are you a Purdue FIRST Programs alumni?</h1><hr><br>
 		<p>If you are a Purdue FIRST Programs Alumni, and would like to give us your information so that we can inform you of what we are currently doing, please fill out this form!</p>
 		<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfL_I3cq_bKNPhdkBA0xUFzWBmBOFsSw_aeMWiLO_bjI08DAA/viewform?embedded=true" width="100%" height="450" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
 	</div>
