--- a/boilerbotbattle.html
+++ b/boilerbotbattle.html
@@ -2,7 +2,7 @@
 layout: event-image
 image: B3-2018.jpg
 title: "Boiler Bot Battle"
-event-date: "October 13th-14th"
+event-date: "October 14th"
 event-year: "2023"
 location: "1406 Teal Rd, Lafayette, IN 47905"
 <!-- link: https://forms.gle/NaFjWxBYwgHV3fkz7 -->
@@ -15,9 +15,11 @@ dark: true
         <h1>About</h1><hr />
         Boiler Bot Battle (B3) is an annual off-season event for FRC teams to compete in the previous season’s game. This means it will be another chance for teams to work together and play <b>CHARGED UP</b>! The event allows teams to learn, practice their skills, and get excited about the upcoming season. Additionally, the event is held close to Purdue University, giving teams the opportunity to visit the campus and ask current students questions.
 	<br><br>
-	More information to come!
+	<a href="https://docs.google.com/document/d/1n9tGrrzEX7URgH6F_rBzsfCL6TzShCB-Yy79Qjn_LtQ/edit?usp=sharing">Live Info Document</a>
     </div>
 </section>
+
+<!--
 
 <section id="schedule" class="primary-section">
     <div class="container">
@@ -93,6 +95,10 @@ dark: true
     </div>
 </section>
 
+-->
+
+<!--
+
 <section id="teams" class="primary-section">
 	<div class="container">
 		<h1>2022 Teams</h1><hr />
@@ -100,11 +106,13 @@ dark: true
 	</div>
 </section>
 
+-->
+
+<!--
 <section id="Sponsors" class="primary-section">
   <div class="container">
     <h1>Event Sponsors</h1><hr />
     A huge thank you to our 2022 Event Sponsors for helping make B3 possible.
-	<!--
     <div class="container">
       <img src="img/JohnDeere.png" class="spons-image" style="margin-bottom: 5px; max-height: 10em;"/>
       <br />
@@ -132,9 +140,9 @@ dark: true
 
 
     </div>
-	-->
   </div>
 </section>
+-->
 
 <!-- <section id="livestream" class="primary-section">
   <div class="container">
@@ -150,6 +158,8 @@ dark: true
     <a href="https://www.youtube.com/user/IndianaRobotics/">Checkout the matches of the 2019 Boiler Bot Battle here!</a>
   </div>
 </section> -->
+
+-->
 
 <section id="location" class="primary-section">
 <div class="container">
