--- a/purdue-forums.html
+++ b/purdue-forums.html
@@ -2,18 +2,18 @@
 layout: event-image
 image: arch.jpg
 title: "Purdue First Forums"
-event-date: "October 21st"
+event-date: "CANCELLED: October"
 event-year: "2023"
 dark: true
 ---
 <section id="about" class="primary-section">
     <div class="container">
-        <h1>About</h1>
-        <hr />
-        <br />
-        This year, Purdue FIRST Forums will take place on Saturday, October 21st.  
-	      The Forums is a fun, educational experience for teams to hear from seasoned FIRST members and mentors, as well as get excited about the upcoming FTC & FRC season! 
+        <h1>About</h1><hr><br>
+	Purdue FIRST Forums, originally planned for October 21st 2023, has been cancelled. Stay tuned to our <a href="https://www.youtube.com/@purduefirstprograms7675">YouTube Channel</a> where we plan to post informative content like that you may have seen at Forums.
+	<!--
+        This year, Purdue FIRST Forums will take place on Saturday, October 21st.  The Forums is a fun, educational experience for teams to hear from seasoned FIRST members and mentors, as well as get excited about the upcoming FTC & FRC season! 
         Please see <a href="https://forums.firstindianarobotics.org/purdue-first-forums-2023">https://forums.firstindianarobotics.org/purdue-first-forums-2023</a> to sign up to present or check out more information about the event!
+	-->
     <br />
     <br />
     <hr class="medium-hr thin" />
