Updated teams for 2024 worlds

--- a/worlds.html
+++ b/worlds.html
@@ -27,47 +27,51 @@ dark: true
 
 <div class="flex-container" style="justify-content: center;">
 	  <team>
-		<p>135 | Pen Robotics Black Knights | <a href="https://www.twitch.tv/firstinspires_milstein">Milstein</a></p>
-		<iframe src="https://www.thebluealliance.com/team/135#current-event" width="400" height="475" frameborder="0" scrolling="no" style="margin-top: -55px; margin-bottom: -85.5px; clip-path: polygon(0 55px, 100% 55px, 100% 82%, 0% 82%);"></iframe>
+		<p>45 | TechnoKats | <a href="https://www.twitch.tv/firstinspires_curie">☢️ Curie</a></p>
+		<iframe src="https://www.thebluealliance.com/team/45#current-event" width="400" height="475" frameborder="0" scrolling="no" style="margin-top: -55px; margin-bottom: -85.5px; clip-path: polygon(0 55px, 100% 55px, 100% 82%, 0% 82%);"></iframe>
 	  </team>
 	  <team>
-		<p>461 | Westside Boiler Invasion | <a href="https://www.twitch.tv/firstinspires_galileo">Galileo</a></p>
+		<p>461 | Westside Boiler Invasion | <a href="https://www.twitch.tv/firstinspires_galileo">🔭 Galileo</a></p>
 		<iframe src="https://www.thebluealliance.com/team/461#current-event" width="400" height="475" frameborder="0" scrolling="no" style="margin-top: -55px; margin-bottom: -85.5px; clip-path: polygon(0 55px, 100% 55px, 100% 82%, 0% 82%);"></iframe>
 	  </team>
 	  <team>
-		<p>1501 | Team THRUST | <a href="https://www.twitch.tv/firstinspires_newton">Newton</a></p>
+		<p>829 | The Digital Goats | <a href="https://www.twitch.tv/firstinspires_galileo">🔭 Galileo</a></p>
+		<iframe src="https://www.thebluealliance.com/team/829#current-event" width="400" height="475" frameborder="0" scrolling="no" style="margin-top: -55px; margin-bottom: -85.5px; clip-path: polygon(0 55px, 100% 55px, 100% 82%, 0% 82%);"></iframe>
+	  </team>
+	  <team>
+		<p>868 | TechHOUNDS | <a href="https://www.twitch.tv/firstinspires_galileo">🔭 Galileo</a></p>
+		<iframe src="https://www.thebluealliance.com/team/868#current-event" width="400" height="475" frameborder="0" scrolling="no" style="margin-top: -55px; margin-bottom: -85.5px; clip-path: polygon(0 55px, 100% 55px, 100% 82%, 0% 82%);"></iframe>
+	  </team>
+	  <team>
+		<p>1501 | Team THRUST | <a href="https://www.twitch.tv/firstinspires_milstein">⚕️ Milstein</a></p>
 		<iframe src="https://www.thebluealliance.com/team/1501#current-event" width="400" height="475" frameborder="0" scrolling="no" style="margin-top: -55px; margin-bottom: -85.5px; clip-path: polygon(0 55px, 100% 55px, 100% 82%, 0% 82%);"></iframe>
 	  </team>
 	  <team>
-		<p>3940 | CyberTooth | <a href="https://www.twitch.tv/firstinspires_newton">Newton</a></p>
-		<iframe src="https://www.thebluealliance.com/team/3940#current-event" width="400" height="475" frameborder="0" scrolling="no" style="margin-top: -55px; margin-bottom: -85.5px; clip-path: polygon(0 55px, 100% 55px, 100% 82%, 0% 82%);"></iframe>
+		<p>1747 | Harrison Boiler Robotics | <a href="https://www.twitch.tv/firstinspires_johnson">🚀 Johnson</a></p>
+		<iframe src="https://www.thebluealliance.com/team/1747#current-event" width="400" height="475" frameborder="0" scrolling="no" style="margin-top: -55px; margin-bottom: -85.5px; clip-path: polygon(0 55px, 100% 55px, 100% 82%, 0% 82%);"></iframe>
 	  </team>
 	  <team>
-		<p>4272 | Maverick Robotics | <a href="https://www.twitch.tv/firstinspires_daly">Daly</a></p>
+		<p>3494 | The Quadrangles | <a href="https://www.twitch.tv/firstinspires_hopper">🐞 Hopper</a></p>
+		<iframe src="https://www.thebluealliance.com/team/3494#current-event" width="400" height="475" frameborder="0" scrolling="no" style="margin-top: -55px; margin-bottom: -85.5px; clip-path: polygon(0 55px, 100% 55px, 100% 82%, 0% 82%);"></iframe>
+	  </team>
+	  <team>
+		<p>4272 | Maverick Robotics | <a href="https://www.twitch.tv/firstinspires_archimedes">🔩 Archimedes</a></p>
 		<iframe src="https://www.thebluealliance.com/team/4272#current-event" width="400" height="475" frameborder="0" scrolling="no" style="margin-top: -55px; margin-bottom: -85.5px; clip-path: polygon(0 55px, 100% 55px, 100% 82%, 0% 82%);"></iframe>
 	  </team>
 	  <team>
-		<p>5010 | Tiger Dynasty | <a href="https://www.twitch.tv/firstinspires_galileo">Galileo</a></p>
+		<p>5010 | Tiger Dynasty | <a href="https://www.twitch.tv/firstinspires_johnson">🚀 Johnson</a></p>
 		<iframe src="https://www.thebluealliance.com/team/5010#current-event" width="400" height="475" frameborder="0" scrolling="no" style="margin-top: -55px; margin-bottom: -85.5px; clip-path: polygon(0 55px, 100% 55px, 100% 82%, 0% 82%);"></iframe>
 	  </team>
 	  <team>
-		<p>6721 | Tindley Trailblazers | <a href="https://www.twitch.tv/firstinspires_hopper">Hopper</a></p>
-		<iframe src="https://www.thebluealliance.com/team/6721#current-event" width="400" height="475" frameborder="0" scrolling="no" style="margin-top: -55px; margin-bottom: -85.5px; clip-path: polygon(0 55px, 100% 55px, 100% 82%, 0% 82%);"></iframe>
+		<p>5484 | Career Academy Robotics - Wolf Pack | <a href="https://www.twitch.tv/firstinspires_galileo">🔭 Galileo</a></p>
+		<iframe src="https://www.thebluealliance.com/team/5484#current-event" width="400" height="475" frameborder="0" scrolling="no" style="margin-top: -55px; margin-bottom: -85.5px; clip-path: polygon(0 55px, 100% 55px, 100% 82%, 0% 82%);"></iframe>
 	  </team>
 	  <team>
-		<p>7457 | suPURDUEper Robotics | <a href="https://www.twitch.tv/firstinspires_hopper">Hopper</a></p>
+		<p>7457 | suPURDUEper Robotics | <a href="https://www.twitch.tv/firstinspires_milstein">⚕️ Milstein</a></p>
 		<iframe src="https://www.thebluealliance.com/team/7457#current-event" width="400" height="475" frameborder="0" scrolling="no" style="margin-top: -55px; margin-bottom: -85.5px; clip-path: polygon(0 55px, 100% 55px, 100% 82%, 0% 82%);"></iframe>
 	  </team>
 	  <team>
-		<p>7617 | RoboBlazers | <a href="https://www.twitch.tv/firstinspires_newton">Newton</a></p>
-		<iframe src="https://www.thebluealliance.com/team/7617#current-event" width="400" height="475" frameborder="0" scrolling="no" style="margin-top: -55px; margin-bottom: -85.5px; clip-path: polygon(0 55px, 100% 55px, 100% 82%, 0% 82%);"></iframe>
-	  </team>
-	  <team>
-		<p>7657 | ThunderBots | <a href="https://www.twitch.tv/firstinspires_galileo">Galileo</a></p>
-		<iframe src="https://www.thebluealliance.com/team/7657#current-event" width="400" height="475" frameborder="0" scrolling="no" style="margin-top: -55px; margin-bottom: -85.5px; clip-path: polygon(0 55px, 100% 55px, 100% 82%, 0% 82%);"></iframe>
-	  </team>
-	  <team>
-		<p>9071 | SlicerTech | <a href="https://www.twitch.tv/firstinspires_hopper">Hopper</a></p>
-		<iframe src="https://www.thebluealliance.com/team/9071#current-event" width="400" height="475" frameborder="0" scrolling="no" style="margin-top: -55px; margin-bottom: -85.5px; clip-path: polygon(0 55px, 100% 55px, 100% 82%, 0% 82%);"></iframe>
+		<p>9431 | Snider Panthers | <a href="https://www.twitch.tv/firstinspires_milstein">⚕️ Milstein</a></p>
+		<iframe src="https://www.thebluealliance.com/team/9431#current-event" width="400" height="475" frameborder="0" scrolling="no" style="margin-top: -55px; margin-bottom: -85.5px; clip-path: polygon(0 55px, 100% 55px, 100% 82%, 0% 82%);"></iframe>
 	  </team>
 	</div>
